downgrade side by side plugin

--- a/src/opp.html
+++ b/src/opp.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-search@2.9.8/dist/leaflet-search.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.sync@0.2.4/L.Map.Sync.min.js"></script>
 
-    <script src="lib/leaflet-side-by-side-18.05.14.js"></script>
+    <script src="lib/leaflet-side-by-side.js"></script>
     <script src="lib/leaflet.magnifyingglass.js"></script>
     <link rel="stylesheet" href="lib/leaflet.magnifyingglass.css" />
 
