add loading screen

--- a/src/opp.html
+++ b/src/opp.html
@@ -41,6 +41,8 @@
       <img id='logo' src=""></img>
     </div>
 
+    <div id="loading"></div>
+
     <div id="container">
 
       <div id="map"></div>
