add meta description

--- a/src/opp.html
+++ b/src/opp.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title></title>
+    <meta name="description" content=""/>
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.6.1/fuse.min.js"></script!-->
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.6.1/fuse.min.js"></script-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.css" />
@@ -28,8 +29,8 @@
     <script src="lib/leaflet.magnifyingglass.js"></script>
     <link rel="stylesheet" href="lib/leaflet.magnifyingglass.css" />
 
-    <script src="opp.js?101"></script>
     <script src="js/L.VoppTilesLayer.js?102"></script>
+    <script src="opp.js?102"></script>
     <link rel="stylesheet" href="opp.css?102" />
 
   </head>
@@ -106,7 +107,7 @@
         <button id="toggleSplitViewBt" class="bt viewMode uiIcon"><span class="tooltip">Comparer avec deux vues synchronisées</span></button>
         <button id="toggleSbsViewBt" class="bt viewMode uiIcon"><span class="tooltip">Comparer avec un séparateur glissant</span></button>
         <button id="toggleSpotViewBt" class="bt viewMode uiIcon"><span class="tooltip">Comparer avec une loupe</span></button>
-        <!--button id="shareBt" class="bt uiIcon"><span class="tooltip">Générer un lien partageable</span></button!-->
+        <!--button id="shareBt" class="bt uiIcon"><span class="tooltip">Générer un lien partageable</span></button-->
         <!--button id="toggleSearchBt" class="bt panelSwitch uiIcon"><span class="tooltip">Rechercher des points de vue</span></button-->
         <button id="aboutBt" class="bt panelSwitch uiIcon"><span class="tooltip"><div>A propos</div></span></button>
       </div>
