--- a/src/opp.html
+++ b/src/opp.html
@@ -99,7 +99,14 @@
           <!--table id="results"></table-->
           <ul id="results"></ul>
         </div>
-        <div id="aboutPanel" class="panel"><!--template--></div>
+
+        <div id="aboutPanel" class="panel">
+          <div id='about'><!--template--></div>
+          <hr>
+          <div id='copyright'><p>
+            Propulsé par <a href="https://github.com/CaussesCevennes/VOPP"><span class='vopp'>VOPP</span></a> © 2017-2020 <a href="http://www.causses-et-cevennes.fr/">Entente Interdépartementale des Causses et des Cévennes</a>.
+          </p></div>
+        </div>
       </div>
 
       <div id="toolbar">
