open copyright links to new tab

--- a/src/opp.html
+++ b/src/opp.html
@@ -104,7 +104,7 @@
           <div id='about'><!--template--></div>
           <hr>
           <div id='copyright'><p>
-            Propulsé par <a href="https://github.com/CaussesCevennes/VOPP"><span class='vopp'>VOPP</span></a> © 2017-2020 <a href="http://www.causses-et-cevennes.fr/">Entente Interdépartementale des Causses et des Cévennes</a>.
+            Propulsé par <a target="_blank" rel="noopener noreferrer" href="https://github.com/CaussesCevennes/VOPP"><span class='vopp'>VOPP</span></a> © 2017-2020 <a target="_blank" rel="noopener noreferrer" href="http://www.causses-et-cevennes.fr/">Entente Interdépartementale des Causses et des Cévennes</a>.
           </p></div>
         </div>
       </div>
