enable fuse search engine

--- a/src/opp.html
+++ b/src/opp.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.6.1/fuse.min.js"></script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.6.1/fuse.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.css" />
@@ -117,7 +117,7 @@
         <button id="toggleSbsViewBt" class="toolbarBt viewMode"><img src="icons/toolbar/sbs.svg" onload="SVGInject(this)"/><span class="tooltip">Comparer avec un séparateur glissant</span></button>
         <button id="toggleSpotViewBt" class="toolbarBt viewMode"><img src="icons/toolbar/spot.svg" onload="SVGInject(this)"/><span class="tooltip">Comparer avec une loupe</span></button>
         <!--button id="shareBt" class="toolbarBt"><img src="icons/toolbar/share.svg" onload="SVGInject(this)"/><span class="tooltip">Générer un lien partageable</span></button-->
-        <!--button id="toggleSearchBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/search.svg" onload="SVGInject(this, {makeIdsUnique:false})"/><span class="tooltip">Rechercher des points de vue</span></button-->
+        <button id="toggleSearchBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/search.svg" onload="SVGInject(this, {makeIdsUnique:false})"/><span class="tooltip">Rechercher des points de vue</span></button>
         <button id="aboutBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/about.svg" onload="SVGInject(this)"/><span class="tooltip"><div>A propos</div></span></button>
       </div>
 
