add dropdown filter

--- a/src/opp.html
+++ b/src/opp.html
@@ -97,6 +97,9 @@
             <button id="searchBt" class="searchPanelBt"></button>
             <!--button id="searchBt" class="searchPanelBt"><img src="icons/toolbar/search.svg" onload="SVGInject(this)"/></button-->
             <button id="clearSearchBt" class="searchPanelBt"></button>
+            <div id='filters'>
+              <select id='providerFilter' class='dropDownFilter'></select>
+            </div>
           </div>
           <!--table id="results"></table-->
           <ul id="results"></ul>
