setup dropdown filters auto-search

--- a/src/opp.html
+++ b/src/opp.html
@@ -94,12 +94,13 @@
           <div id="searchBar">
             <span>Rechercher :</span>
             <input type="text" id="query"></input>
-            <button id="searchBt" class="searchPanelBt"></button>
-            <!--button id="searchBt" class="searchPanelBt"><img src="icons/toolbar/search.svg" onload="SVGInject(this)"/></button-->
             <button id="clearSearchBt" class="searchPanelBt"></button>
-            <div id='filters'>
-              <select id='providerFilter' class='dropDownFilter'></select>
-            </div>
+          </div>
+          <div id='filters'>
+            <span>Itinéraire</span>
+            <select id='PROVIDER' class='dropDownFilter'>
+              <option value=""></option>
+            </select>
           </div>
           <!--table id="results"></table-->
           <ul id="results"></ul>
